--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -32,12 +32,10 @@
                 <a class="dropdown-item" href="#">Settings</a>
                 <a class="dropdown-item" href="#">Activity Log</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">Logout</a>
-                <form method="POST" action="http://localhost:8888/logout">
-                    <input type="submit" value="Sign Out"/>
+                <form class="dropdown-item" action="/logout" method="post">
+                    <input type="hidden" name="_csrf" value="" />
+                    <button type="submit" class="btn btn-primary">Logout</button>
                 </form>
-
-
             </div>
         </li>
     </ul>
@@ -46,52 +44,55 @@
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
-            
-                    <div class="profile-userpic">
-                    
-					<img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
-				</div>
-			
-				<div class="profile-usertitle">
-					<div class="profile-usertitle-name" >
-						{{userData.firstName}}
-            <div class="profile-usertitle-name" >
-						{{userData.lastName}}
-            <div class="profile-usertitle-name" >
-						{{userData.email}}
-					<div class="profile-usertitle-job">
-							{{userData.mobileNr}}
-					</div>
-				</div>
-        	</div>
-          	</div>
-				<div class="profile-userbuttons">
-				</div>
+                <div class="profile-userpic">
 
-                <div class="nav">
-
-                    <div class="sb-sidenav-menu-heading">Admin</div>
-                    <a class="nav-link" href="http://localhost:8888/Admin">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Dashboard
-                    </a>
-                    <a class="nav-link" href="http://localhost:8888/Admin/Products">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Products
-                    </a>
-                    <a class="nav-link" href="http://localhost:8888/Admin/Users">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Users
-                    </a>
-                    <a class="nav-link" href="http://localhost:8888/Admin/Orders">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Orders
-                    </a>
+                    <img src={{userData.pictureUrl}} class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
                 </div>
-            </div>
-            <div class="sb-sidenav-footer">
-                <div class="small">Logged in as:</div>
-                Start Bootstrap
+                <div class="profile-usertitle">
+
+                    <div class="profile-usertitle-name" >
+                        <p>{{userData.firstName}} {{userData.lastName}}</p>
+                        <div class="profile-usertitle-name" >
+
+                            <div class="profile-usertitle-name" >
+                                <p>{{userData.email}}</p>
+                                <div class="profile-usertitle-job">
+                                    <p>{{userData.mobileNr}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sb-sidenav-menu-heading">Admin Section</div>
+                    <div class="profile-userbuttons">
+                    </div>
+
+                    <div class="nav">
+                        <a class="nav-link" href="http://localhost:8888/Admin">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Dashboard
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/Admin/Products">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Products
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/Admin/Users">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Users
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/Admin/Orders">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Orders
+                        </a>
+                        <a class="nav-link" href="http://localhost:8888/Admin/Reviews">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Reviews
+                        </a>
+                    </div>
+                </div>
+                <div class="sb-sidenav-footer">
+                    <div class="small">Logged in as:</div>
+                    Start Bootstrap
+                </div>
             </div>
         </nav>
     </div>
@@ -119,6 +120,7 @@
                                                     <div class="card mb-4">
                                                         <div class="card-body">
                                                             <form method="POST" action="/Admin/addProduct">
+                                                                <h1 class="align-content-center text-primary">Add Product</h1>
                                                                 <div class="form-group">
                                                                     <label for="adminProductName">Product name</label>
                                                                     <input type="text" class="form-control" id="adminProductName" name="title" placeholder="">
@@ -168,6 +170,7 @@
                                                     <div class="card mb-4">
                                                         <div class="card-body">
                                                             <form method="POST" action="/Admin/addUser">
+                                                                <h1 class="h1 align-content-center text-secondary">Add User</h1>
                                                                 <div class="form-group">
                                                                     <label for="AdminfirstName">Firstname</label>
                                                                     <input type="text" class="form-control" id="AdminfirstName" name ="firstName" aria-describedby="emailHelp" placeholder="Enter email">
