--- a/src/main/resources/templates/Frontend/Admin/Orders.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Orders.mustache
@@ -32,7 +32,10 @@
                 <a class="dropdown-item" href="#">Settings</a>
                 <a class="dropdown-item" href="#">Activity Log</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">Logout</a>
+                <form class="dropdown-item" action="/logout" method="post">
+                    <input type="hidden" name="_csrf" value="" />
+                    <button type="submit" class="btn btn-primary">Logout</button>
+                </form>
             </div>
         </li>
     </ul>
@@ -59,6 +62,10 @@
                     <a class="nav-link" href="http://localhost:8888/Admin/Orders">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Orders
+                    </a>
+                    <a class="nav-link" href="http://localhost:8888/Admin/Reviews">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        Reviews
                     </a>
                 </div>
             </div>
