--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - SB Admin</title>
+    <title>{{userData.firstName}}</title>
     <link href="/css/Admin/styles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
@@ -32,7 +32,10 @@
                 <a class="dropdown-item" href="#">Settings</a>
                 <a class="dropdown-item" href="#">Activity Log</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">Logout</a>
+                <form class="dropdown-item" action="/logout" method="post">
+                    <input type="hidden" name="_csrf" value="" />
+                    <button type="submit" class="btn btn-primary">Logout</button>
+                </form>
             </div>
         </li>
     </ul>
@@ -59,6 +62,10 @@
                     <a class="nav-link" href="http://localhost:8888/Admin/Orders">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Orders
+                    </a>
+                    <a class="nav-link" href="http://localhost:8888/Admin/Reviews">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        Reviews
                     </a>
                 </div>
             </div>
