--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -45,7 +45,10 @@
                         <a class="dropdown-item" href="#">Settings</a>
                         <a class="dropdown-item" href="#">Activity Log</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="login.html">Logout</a>
+                        <form class="dropdown-item" action="/logout" method="post">
+                            <input type="hidden" name="_csrf" value=""/>
+                            <button type="submit" class="btn btn-primary">Logout</button>
+                        </form>
                     </div>
                 </li>
             </ul>
