--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -211,9 +211,11 @@ nav ul li a {
                      <li><a href="#">About</a></li>
                      <li><a href="#">Blog</a></li>
                      <li><a href="#">Contact</a></li>
-                     <li><a href="#">Contact</a></li>
-                     <li><a href="#">Contact</a></li>
+					 		<li><div id="cd-cart-trigger"><a class="cd-img-replace" href="#0">Cart</a></div></li>
+
+
                   </ul>
+				  	
                </div>
             </nav>
 			<section class="hero hero--video">
@@ -230,6 +232,9 @@ nav ul li a {
   
   </section>
          </header>
+
+
+		 
 
 
 	
