--- a/src/main/resources/templates/Frontend/Main/ProductPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/ProductPage.mustache
@@ -8,6 +8,8 @@
         <meta name="author" content="" />
         <title>Dashboard - SB Admin</title>
      <link href="/css/Main/product.css" rel="stylesheet" />
+          <link href="/css/Main/caro.css" rel="stylesheet" />
+
      <style>
     
      </style>
@@ -45,7 +47,7 @@
             <div id="layoutSidenav_content">
             
                 <main>
-                    <div class="container-fluid">
+            <div class="container-fluid" style="margin:auto;">
                       
     <div class="container" style="padding-top: 5%">
  
@@ -102,6 +104,86 @@
       </div>
     
                     </div>
+
+                    <div class="container">
+    			
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="rating-block">
+					<h4>Average user rating</h4>
+					<h2 class="bold padding-bottom-7">4.3 <small>/ 5</small></h2>
+					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
+					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					</button>
+				</div>
+			</div>
+	
+		
+		<div class="row">
+			<div class="col-sm-12">
+				<hr/>
+				<div class="review-block">
+
+                {{#Reviews}}
+                
+					<div class="row">
+						<div class="col-sm-12">
+							<img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
+							<div class="review-block-name"><a href="#">nktailor</a></div>
+							<div class="review-block-date">{{createdAt}}</div>
+						</div>
+						<div class="col-sm-9">
+
+							<div class="review-block-rate" id="{{rating}}">
+								<button type="button" id="star1" class="btn btn-warning btn-xs" aria-label="Left Align">
+								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+								</button>
+
+								<button type="button" id="star2" class="btn btn-warning btn-xs" aria-label="Left Align">
+								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+								</button>
+
+								<button type="button" id="star3" class="btn btn-warning btn-xs" aria-label="Left Align">
+								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+								</button>
+
+								<button type="button" id="star4" class="btn btn-warning btn-xs" aria-label="Left Align">
+								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+								</button>
+
+								<button type="button" id="star5" class="btn btn-warning btn-xs" aria-label="Left Align">
+								  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+								</button>
+							</div>
+
+							<div class="review-block-title">{{title}}</div>
+							<div class="review-block-description">{{content}}</div>
+						</div>
+					</div>
+					<hr/>
+
+                {{/Reviews}}
+
+
+				
+				</div>
+			</div>
+		</div>
+		</div>
+
+                    
                 </main>
 
 
@@ -136,6 +218,47 @@
     <script src="../../assets/js/vendor/popper.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
+
+    <script>
+
+    $('.review-block-rate').each(function(i, obj) {
+    var id = $(this).attr('id');
+    if(id === '1'){
+   document.getElementByClassName("review-block-rate").getElementsById("star1").classname="btn btn-default btn-grey btn-sm"
+
+ i.getChildById("star2").className = "btn btn-default btn-grey btn-sm";
+ i.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
+ i.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
+ i.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+
+
+     
+    } else if(id === '2'){
+        alert("2");
+
+i.getElementById("star3").className = "btn btn-default btn-grey btn-sm";
+i.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
+i.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+
+    }
+    else if(id === '3'){
+document.getElementById("star4").className = "btn btn-default btn-grey btn-sm";
+document.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+
+    }
+    else if(id === '4'){
+document.getElementById("star5").className = "btn btn-default btn-grey btn-sm";
+
+    }
+    else if(id === '5'){
+
+
+    }
+
+    
+});
+    
+    </script>
   
     </body>
 </html>
