--- a/src/main/resources/templates/Frontend/Main/SearchPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/SearchPage.mustache
@@ -83,10 +83,7 @@ opacity:0;
 }
 
 header {
-      width: 100%;
-      height: 80vh;
-      background: url(/img/hero.png) no-repeat 50% 50%;
-      background-size: cover;
+   
 }
 
 .content {
@@ -239,8 +236,8 @@ nav ul li a {
       <div class="col-12">
         <div class="search">
           <form>
-            <input class="input" type="text" id="searchValue" name="s" placeholder="How may we help you?">
-            <button type="submit" id="search"  onclick="search()"><i class="fa fa-search"></i></button>
+            <input class="input" type="text" name="s" placeholder="How may we help you?">
+            <button type="submit"><i class="fa fa-search"></i></button>
           </form>
         </div>
       </div>
@@ -319,12 +316,6 @@ nav ul li a {
                   $('nav').removeClass('black');
             }
       })
-
-      function search() {
-           var text=document.getElementById("searchValue").value;
-           window.alert(text);
-
-}
 </script>
 
 </body>
